nashorn/test/script/error/JDK-8020437-2.js.EXPECTED
test/script/error/JDK-8020437-2.js:36:12 Expected ; but found ++
EOF}); var x++; // syntax error in same line
            ^
